--- a/index.html
+++ b/index.html
@@ -394,6 +394,22 @@
       padding: 14px;
     }
 
+    .video-iframe {
+      position: relative;
+      width: 100%;
+      padding-bottom: 56.25%;
+      overflow: hidden;
+      border-radius: 12px;
+    }
+
+    .video-iframe iframe {
+      position: absolute;
+      inset: 0;
+      width: 100%;
+      height: 100%;
+      border: 0;
+    }
+
     .contacts-grid {
       display: grid;
       grid-template-columns: minmax(0,1.2fr) minmax(0,1fr);
@@ -690,11 +706,17 @@
       <h2 class="section-heading">Видео наших праздников</h2>
       <p class="section-sub">
         Здесь можно сразу посмотреть, как мы работаем вживую: манера ведения, энергия зала, музыка, танцпол.
-        Плейлист подтягивается напрямую из VK Video.
+        Ниже встроен плейлист VK Video с нашими работами.
       </p>
 
       <div class="video-wrapper">
-        <div id="vk_playlist"></div>
+        <div class="video-iframe">
+          <iframe
+            src="https://vkvideo.ru/playlist/11173486_3"
+            allowfullscreen
+            allow="autoplay; encrypted-media"
+          ></iframe>
+        </div>
       </div>
     </section>
 
@@ -790,11 +812,6 @@ if (typeof VK !== 'undefined') {
       color2: 'f9fafb',
       color3: 'f97316'
   }, 72015374);
-
-  VK.Widgets.Playlist("vk_playlist", 11173486, 3, {
-      width: "100%",
-      height: 430
-  });
 }
 </script>
 
